--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
     "cSpell.words": [
+        "Chakra",
+        "CMNR",
         "Defitaocian",
-        "inteution"
+        "inteution",
+        "MERN",
+        "Perinthalmanna",
+        "SHAFEEQUE"
     ]
 }
