--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,12 @@
     "cSpell.words": [
         "Chakra",
         "CMNR",
+        "Crapee",
         "Defitaocian",
         "inteution",
         "MERN",
         "Perinthalmanna",
+        "Razorpay",
         "SHAFEEQUE"
     ]
 }
